[package]
name = "automerge"
version = "0.7.3"
edition = "2021"
license = "MIT"
repository = "https://github.com/automerge/automerge"
rust-version = "1.85.0"
description = "A JSON-like data structure (a CRDT) that can be modified concurrently by different users, and merged again automatically"
readme = "./README.md"

[features]
utf8-indexing = []
utf16-indexing = []

[dependencies]
hexane = { version = "0.1.7", path = "../hexane" }
hex = "^0.4.3"
leb128 = "^0.2.5"
sha2 = { version = "0.11.0-pre.5", default-features = false }
thiserror = "^2.0.12"
itertools = "0.14.0"
flate2 = "^1.0.22"
smol_str = { version = "0.2", features = ["serde"] }
tracing = { version = "^0.1.29" }
rustc-hash = "^2.1.1"
tinyvec = { version = "^1.5.1", features = ["alloc"] }
serde = { version = "^1.0", features = ["derive"] }
cfg-if = "1.0"
getrandom = "0.3"

rand = { version = "^0.9", default-features = false }

unicode-segmentation = "1.10.1"

[lints]
workspace = true

