[package]
name = "hexane"
version = "0.1.7"
edition = "2021"
license = "MIT"
repository = "https://github.com/automerge/automerge"
rust-version = "1.80.0"
description = "A columnar compression library used by automerge"
readme = "./README.md"

[lib]
bench = false


[features]

[dependencies]
leb128 = "^0.2.5"
thiserror = "^2.0.12"

[lints]
workspace = true

[profile.release]
debug = true

